--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="jumbotron text-center">
       <h1>Red Rover</h1>
       <h4>Mission to Scrape Mars</h4>
-      <p><a class="btn btn-primary btn-lg" href="scrape" role="button">Scrape Mars Data</a></p>
+      <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape Mars Data</a></p>
     </div>
 
     <!-- Mars data -->
